--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "theme_color": "#18181b",
-  "background_color": "#d6c0b3",
+  "theme_color": "#d6c0b3",
+  "background_color": "#18181b",
   "icons": [
     {
       "purpose": "maskable",
