--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,6 @@
 {
   "theme_color": "#d6c0b3",
   "background_color": "#18181b",
-  "icons": [
-    {
-      "purpose": "maskable",
-      "sizes": "512x512",
-      "src": "icon512_maskable.png",
-      "type": "image/png"
-    },
-    {
-      "purpose": "any",
-      "sizes": "512x512",
-      "src": "icon512_rounded.png",
-      "type": "image/png"
-    }
-  ],
   "orientation": "portrait",
   "display": "standalone",
   "dir": "auto",
@@ -22,5 +8,34 @@
   "name": "KVN Production",
   "short_name": "KVN",
   "start_url": "/",
-  "scope": "/"
+  "scope": "/",
+  "icons": [
+    {
+      "src": "maskable.png",
+      "sizes": "196x196",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "logo192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "logo256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "logo384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+    "src": "logo512.png",
+    "sizes": "512x512",
+    "type": "image/png"
+    }
+  ]
+ 
 }
