--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "theme_color": "#d6c0b3",
-  "background_color": "#18181b",
+  "theme_color": "#e5b80b",
+  "background_color": "#fff",
   "orientation": "portrait",
   "display": "standalone",
   "dir": "auto",
