--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "theme_color": "#e5b80b",
-  "background_color": "#fff",
+  "background_color": "#e5b80b",
   "orientation": "portrait",
   "display": "standalone",
   "dir": "auto",
