--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,8 +5,8 @@
   "display": "standalone",
   "dir": "auto",
   "lang": "en-GB",
-  "name": "KVN Production",
-  "short_name": "KVN",
+  "name": "Abhijit Enterprises",
+  "short_name": "AE",
   "start_url": "/",
   "scope": "/",
   "icons": [
